--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
   <div class="form-container">
-    <h1>GoKULACPandA＋</h1>
-    <p><input type="text" name="username" placeholder="ESC-IDを入力"></p>
-    <p><input type="password" name="password" placeholder="パスワードを入力"></p>
-    <p><button type="submit">ログイン</button></p>
+    <form action="/logined" method="post">
+      <h1>GoKULACPandA＋</h1>
+      <p><input type="text" name="username" placeholder="ESC-IDを入力"></p>
+      <p><input type="password" name="password" placeholder="パスワードを入力"></p>
+      <p><button type="submit">ログイン</button></p>
+    </form>
   </div>
 </body>
 </html>
